--- a/microservices/ui/app/src/App.css
+++ b/microservices/ui/app/src/App.css
@@ -1,28 +1,16 @@
-.App {
-  text-align: center;
+.dashboard {
+  display: flex;
+  direction: row;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+
+.sidebar {
+  width: 15%;
+  height: 100%;
+  z-index: 9999;
+  position: fixed;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.tablespace {
+  margin-left: 15%;
 }
