--- a/microservices/ui/app/src/App.css
+++ b/microservices/ui/app/src/App.css
@@ -9,6 +9,9 @@
   height: 100%;
   z-index: 9999;
   position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .tablespace {
