--- a/microservices/ui/app/src/App.css
+++ b/microservices/ui/app/src/App.css
@@ -36,6 +36,15 @@
 	font-size: 80%;
 }
 
+.status {
+	display: flex;
+	align-items: flex-end;
+	flex-direction: column;
+	width: auto;
+	font-size: 70%;
+	padding-bottom: 2%;
+}
+
 .dashboard {
   display: flex;
   direction: row;
@@ -59,6 +68,7 @@
   margin-left: 15%;
   padding-left: 3%;
   padding-top: 2%;
+  width: auto;
 }
 
 .sidebarButton {
